# ontology-matching-service

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: call_qdrant_database.yaml
app/: main.py
data/: curated_examples.json
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  OntologyBox.tsx  QueryComponent.tsx  types.ts
notebooks/: test_model.ipynb
scripts/: build_and_push_docker_images.sh  embed_cognitive_atlas.py  embed_nbo_ontology.py  embed_ontology.py  load_env_variables  source_backend_env.sh
src/ontology_matching_service/: ontology_grounding.py
